# WeatherReport

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  release-task.sh  requirements.txt
WeatherForecast/: settings.py  urls.py
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
nginx/: default.conf
tests/: test_weather.py
